# mp4_player

./: .gitignore  README.ja.md  README.md  pyproject.toml
src/mp4_player/: __init__.py  main.py
