[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mp4_player"
version = "0.1.0"
description = "A simple MP4 player that sequentially plays all MP4 files in the current directory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "furuya02", email = "spw0022@gmail.com" }
]
keywords = ["mp4", "video", "player", "opencv", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mp4_player = "mp4_player.main:main"

[project.urls]
Homepage = "https://github.com/furuya02/mp4_player"
Repository = "https://github.com/furuya02/mp4_player"
Issues = "https://github.com/furuya02/mp4_player/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mp4_player"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
